# EthicAI

./: .gitignore  CMD_SUBIR.txt  Directory.Build.props  Dockerfile  EthicAI.sln  LICENSE  README.md  build_out.txt  cripto_build_out.txt  restore_out.txt  tmp_broadcast_prod.html  tmp_build_log.txt  tmp_tvMode_audio_check.mjs  tmp_tvMode_check.mjs  tmp_tvMode_collision_check.mjs  tmp_tvMode_pushin_check.mjs  tmp_tvMode_pushin_hotfix.mjs  web_build_out.txt
.codex-artifacts/: criptoversus_betting-keypair.json
.codex-build/: restore-diag.txt
.codex-temp/: criptoversus-api-docker-compose.yml  worker_restore_diag.txt
.tmpobj/: DAL.csproj.nuget.dgspec.json  project.assets.json
.web-obj/: DAL.csproj.nuget.dgspec.json  DAL.csproj.nuget.g.props  DTOs.csproj.nuget.dgspec.json  project.assets.json
Businnes/: BLL.csproj  BinanceService.cs  GitHubService.cs  ILedgerService.cs  PostService.cs  PreSaleService.cs  SecretManager.cs  SolanaService.cs  UserService.cs
CriptoVersus/: .gitignore  (+14 more)
CriptoVersus.API.Tests/: ApiTestStubs.cs  AudioAssetAdminTests.cs  AudioGenerationQueueServiceTests.cs  AudioNarrativeResolverServiceTests.cs  CommunityMatchServiceTests.cs  CommunityMatchesControllerTests.cs  CriptoVersus.API.Tests.csproj  MatchMetricSnapshotsEndpointTests.cs  MatchScorePresentationVersionGuardTests.cs  MatchTimingNormalizationTests.cs  ProceduralNarrativeTextTests.cs  SocialWinRate24hServiceTests.cs  TextMojibakeRepairTests.cs
solana/criptoversus_betting/programs/criptoversus_betting/: Cargo.toml
solana/criptoversus_betting/programs/criptoversus_betting/src/: lib.rs
(+652 files in other folders)
