[package]
name = "criptoversus_betting"
version = "0.1.0"
description = "CriptoVersus on-chain betting escrow"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "criptoversus_betting"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
